@startuml

title __M.APP's Class Diagram__\n

  namespace com.example.m {
    abstract class com.example.m.ATrip {
    }
  }
  

  namespace com.example.m {
    class com.example.m.BroadcastCharging {
    }
  }
  

  namespace com.example.m {
    class com.example.m.BroadcastLowBattery {
    }
  }
  

  namespace com.example.m {
    class com.example.m.BudgetActivity {
    }
  }
  

  namespace com.example.m {
    class com.example.m.BuildConfig {
    }
  }
  

  namespace com.example.m {
    class com.example.m.ForgotPasswordActivity {
    }
  }
  

  namespace com.example.m {
    class com.example.m.LoadActivity {
    }
  }
  

  namespace com.example.m {
    class com.example.m.LoginActivity {
    }
  }
  

  namespace com.example.m {
    class com.example.m.MainActivity {
    }
  }
  

  namespace com.example.m {
    class com.example.m.RegisterActivity {
    }
  }
  

  namespace com.example.m {
    class com.example.m.SoundService {
    }
  }
  

  namespace com.example.m {
    class com.example.m.Trip {
    }
  }
  

  namespace com.example.m {
    class com.example.m.TripListActivity {
    }
  }
  

  namespace com.example.m {
    class com.example.m.TripsAdapter {
    }
  }
  

  namespace com.example.m {
    class com.example.m.User {
    }
  }
  

  namespace com.example.m {
    class com.example.m.WhatActivity {
    }
  }
  

  namespace com.example.m {
    class com.example.m.WhereActivity {
    }
  }
  

  com.example.m.ATrip .up.|> java.lang.Comparable
  com.example.m.BroadcastCharging -up-|> android.content.BroadcastReceiver
  com.example.m.BroadcastLowBattery -up-|> android.content.BroadcastReceiver
  com.example.m.BudgetActivity .up.|> android.view.View.OnClickListener
  com.example.m.BudgetActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.m.ForgotPasswordActivity .up.|> android.view.View.OnClickListener
  com.example.m.ForgotPasswordActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.m.LoadActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.m.LoginActivity .up.|> android.view.View.OnClickListener
  com.example.m.LoginActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.m.MainActivity .up.|> android.view.View.OnClickListener
  com.example.m.MainActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.m.RegisterActivity .up.|> android.view.View.OnClickListener
  com.example.m.RegisterActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.m.SoundService -up-|> android.app.Service
  com.example.m.Trip .up.|> java.lang.Comparable
  com.example.m.Trip -up-|> com.example.m.ATrip
  com.example.m.TripListActivity .up.|> android.view.View.OnClickListener
  com.example.m.TripListActivity .up.|> android.widget.AdapterView.OnItemLongClickListener
  com.example.m.TripListActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.m.TripListActivity o-- com.example.m.TripsAdapter : adapter
  com.example.m.TripsAdapter -up-|> android.widget.ArrayAdapter
  com.example.m.WhatActivity .up.|> android.view.View.OnClickListener
  com.example.m.WhatActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.m.WhereActivity .up.|> android.view.View.OnClickListener
  com.example.m.WhereActivity .up.|> android.widget.AdapterView.OnItemClickListener
  com.example.m.WhereActivity -up-|> androidx.appcompat.app.AppCompatActivity


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
